--- a/styles/exercise.css
+++ b/styles/exercise.css
@@ -57,7 +57,7 @@ body {
 }
 
 .circle {
-    position:relative;
+    position: relative;
     width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -68,6 +68,7 @@ body {
     justify-content: center;
     align-items: center;
 }
+
 .breathing-text {
     position: absolute;
     top: 50%;
@@ -83,7 +84,7 @@ body {
 }
 
 .breathing-indicator {
-    position:absolute;
+    position: absolute;
     width: 40px;
     height: 120px;
     z-index: 1;
@@ -117,31 +118,66 @@ body {
     opacity: 1;
 }
 
-@keyframes expand {
+@-webkit-keyframes expand {
     from { 
+        -webkit-transform: scale(0.8);
         transform: scale(0.8);
         box-shadow: 0 0 30px rgba(76, 175, 80, 0.2);
     }
     to { 
+        -webkit-transform: scale(1.2);
         transform: scale(1.2);
         box-shadow: 0 0 50px rgba(76, 175, 80, 0.4);
     }
 }
 
-@keyframes contract {
+@keyframes expand {
     from { 
+        -webkit-transform: scale(0.8);
+        transform: scale(0.8);
+        box-shadow: 0 0 30px rgba(76, 175, 80, 0.2);
+    }
+    to { 
+        -webkit-transform: scale(1.2);
+        transform: scale(1.2);
+        box-shadow: 0 0 50px rgba(76, 175, 80, 0.4);
+    }
+}
+
+@-webkit-keyframes contract {
+    from { 
+        -webkit-transform: scale(1.2);
         transform: scale(1.2);
         box-shadow: 0 0 50px rgba(244, 67, 54, 0.4);
     }
     to { 
+        -webkit-transform: scale(0.8);
         transform: scale(0.8);
         box-shadow: 0 0 30px rgba(244, 67, 54, 0.2);
     }
 }
 
+@keyframes contract {
+    from { 
+        -webkit-transform: scale(1.2);
+        transform: scale(1.2);
+        box-shadow: 0 0 50px rgba(244, 67, 54, 0.4);
+    }
+    to { 
+        -webkit-transform: scale(0.8);
+        transform: scale(0.8);
+        box-shadow: 0 0 30px rgba(244, 67, 54, 0.2);
+    }
+}
+
+@-webkit-keyframes hold {
+    0%, 100% { -webkit-transform: scale(1); transform: scale(1); }
+    50% { -webkit-transform: scale(1.05); transform: scale(1.05); }
+}
+
 @keyframes hold {
-    0%, 100% { transform: scale(1); }
-    50% { transform: scale(1.05); }
+    0%, 100% { -webkit-transform: scale(1); transform: scale(1); }
+    50% { -webkit-transform: scale(1.05); transform: scale(1.05); }
 }
 
 .timer {
