--- a/styles/main.css
+++ b/styles/main.css
@@ -77,13 +77,15 @@ main {
 
 .card {
     perspective: 1000px;
-    height: 400px;
+    min-height: 350px;
+    display: flex;
+    flex-direction: column;
 }
 
 .card-inner {
+    flex-grow: 1;
     position: relative;
     width: 100%;
-    height: 100%;
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
@@ -94,6 +96,7 @@ main {
 }
 
 .card-front, .card-back {
+    position: 2rem 1.5rem;
     position: absolute;
     width: 100%;
     height: 100%;
