--- a/styles/feedback.css
+++ b/styles/feedback.css
@@ -48,12 +48,13 @@ textarea:focus {
     outline: none;
     border-color: var(--primary);
     box-shadow: 0 0 0 3px rgba(76, 161, 175, 0.1);}
-.submit-btn {
+
+    .submit-btn {
     width: 100%;
     padding: 1rem;
     background: linear-gradient(145deg, var(--primary), var(--text));
-    color: white;
-    border: none;
+    color: rgb(79, 77, 77);
+    border:black;
     border-radius: 25px;
     font-size: 1.1rem;
     cursor: pointer;
